--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "globals": "^15.14.0",
         "node-fetch": "^3.3.1",
         "openai": "^5.8.2",
-        "prettier": "^3.6.2"
+        "prettier": "^3.6.2",
+        "zod": "^3.25.76"
     },
     "devDependencies": {
         "@types/bluebird": "^3.5.42",
